--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ Flask-Assets==0.10
 Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Jinja2==2.7.3
+Mako==1.0.0
 MarkupSafe==0.23
 MySQL-python==1.2.5
 SQLAlchemy==0.9.7
 Werkzeug==0.9.6
+alembic==0.6.7
+cssmin==0.2.0
+inflect==0.2.4
 itsdangerous==0.24
+jsmin==2.0.11
 requests==2.4.1
 webassets==0.10.1
 wsgiref==0.1.2
