--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+-f http://eggshop.eaudeweb.ro
+eea.usersdb==1.3.9
 Flask==0.10.1
 Flask-Assets==0.10
+Flask-Login==0.2.11
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
 Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
+Flask-Security==1.7.3
 Flask-WTF==0.10.2
 Jinja2==2.7.3
 Mako==1.0.0
@@ -11,10 +17,13 @@ SQLAlchemy==0.9.7
 WTForms==2.0.1
 Werkzeug==0.9.6
 alembic==0.6.7
+blinker==1.3
 cssmin==0.2.0
 inflect==0.2.4
 itsdangerous==0.24
 jsmin==2.0.11
+meld3==1.0.0
+passlib==1.6.2
 requests==2.4.1
 webassets==0.10.1
 wsgiref==0.1.2
