--- a/settings.py.example
+++ b/settings.py.example
@@ -3,3 +3,5 @@ SQLALCHEMY_DATABASE_URI = 'mysql://root@ubuntu.local/art12'
 DEBUG = True
 
 SECRET_KEY = 'secret is secret'
+
+GOOGLE_ANALYTICS = True
