[viewer] Update the EU map buttons. Refs #21212

--- a/settings.py.example
+++ b/settings.py.example
@@ -5,3 +5,7 @@ DEBUG = True
 SECRET_KEY = 'secret is secret'
 
 GOOGLE_ANALYTICS = True
+
+MAPS_PATH = 'absolute path to the maps directory'
+MAPS_URI = 'server URI for the maps directory'
+MAPS_EXTENSION = '.png'
