--- a/deploy/art12-devel/docker-compose.yml
+++ b/deploy/art12-devel/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   art12:
-    image: art12:devel
+    image: eeacms/art12-viewer:devel
     labels:
       io.rancher.scheduler.affinity:host_label_ne: reserved=yes
     depends_on:
