--- a/deploy/art12-devel/docker-compose.yml
+++ b/deploy/art12-devel/docker-compose.yml
@@ -2,36 +2,72 @@ version: '2'
 
 services:
 
-  art12:
-    image: eeacms/art12-viewer:devel
-    labels:
-      io.rancher.scheduler.affinity:host_label_ne: reserved=yes
+  apache:
+    image: eeacms/apache:2.4s
+    ports:
+    - 80:80
     depends_on:
-    - mysql
+    - art12-app
+    - art12-static
+    volumes:
+    - apache:/usr/local/apache2/conf
+
+  art12-app:
+    image: art12:devel
     ports:
     - "5000:5000"
+    depends_on:
+    - mysql
     env_file:
     - ../art12.devel.env
-    environment:
-      TZ: Europe/Copenhagen
     volumes:
+    - staticdata:/var/local/art12/art12/static
     - ../../:/var/local/art12
-    command: ["runserver", "-h", "0.0.0.0", "-p", "5000"]
+    command: ["runserver", "-t", "0.0.0.0", "-p", "5000"]
+
+  art12-static:
+    image: nginx:alpine
+    depends_on:
+    - art12-app
+    volumes:
+    - nginx:/etc/nginx/conf.d
+    - staticdata:/var/local/art12/art12/static:ro
 
   mysql:
     image: mysql:latest
-    labels:
-      io.rancher.scheduler.affinity:host_label_ne: reserved=yes
     ports:
     - "3306:3306"
     env_file:
     - ../art12.devel.env
-    environment:
-      TZ: Europe/Copenhagen
     volumes:
     - mysqldata:/var/lib/mysql
     command: "--character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
 
+  rsync-server:
+    image: eeacms/rsync
+    depends_on:
+    - apache
+    - art12-app
+    - mysql
+    ports:
+    - "2222:22/tcp"
+    command:
+    - server
+    env_file:
+    - ../rsync.key
+    tty: true
+    stdin_open: true
+    volumes:
+    - apache:/usr/local/apache2/conf
+    - nginx:/etc/nginx/conf.d
+    - mysqldata:/var/lib/mysql
+
 volumes:
+  apache:
+    driver: local
+  nginx:
+    driver: local
+  staticdata:
+    driver: local
   mysqldata:
     driver: local
