--- a/deploy/art12/docker-compose.yml
+++ b/deploy/art12/docker-compose.yml
@@ -2,8 +2,20 @@ version: '2'
 
 services:
 
-  art12:
-    image: eeacms/art12-viewer:latest
+  apache:
+    image: eeacms/apache:2.4s
+    labels:
+      io.rancher.scheduler.affinity:host_label_ne: reserved=yes
+    depends_on:
+    - art12-app
+    - art12-static
+    environment:
+      TZ: Europe/Copenhagen
+    volumes:
+    - apache:/usr/local/apache2/conf
+
+  art12-app:
+    image: eeacms/art12-viewer:2.0
     labels:
       io.rancher.scheduler.affinity:host_label_ne: reserved=yes
     depends_on:
@@ -12,6 +24,18 @@ services:
     - ../art12.env
     environment:
       TZ: Europe/Copenhagen
+    volumes:
+    - staticdata:/var/local/art12/art12/static
+
+  art12-static:
+    image: nginx:alpine
+    depends_on:
+    - art12-app
+    environment:
+      TZ: Europe/Copenhagen
+    volumes:
+    - nginx:/etc/nginx/conf.d
+    - staticdata:/var/local/art12/art12/static:ro
 
   mysql:
     image: mysql:latest
@@ -31,10 +55,11 @@ services:
       io.rancher.container.pull_image: always
       io.rancher.scheduler.affinity:host_label_ne: reserved=yes
     depends_on:
-    - art12
+    - apache
+    - art12-app
     - mysql
     ports:
-    - "2222:22/tcp"
+    - "2223:22/tcp"
     command:
     - server
     env_file:
@@ -44,8 +69,16 @@ services:
     tty: true
     stdin_open: true
     volumes:
+    - apache:/usr/local/apache2/conf
+    - nginx:/etc/nginx/conf.d
     - mysqldata:/var/lib/mysql
 
 volumes:
+  apache:
+    driver: local
+  nginx:
+    driver: local
+  staticdata:
+    driver: local
   mysqldata:
     driver: local
