--- a/deploy/art12/rancher-compose.yml
+++ b/deploy/art12/rancher-compose.yml
@@ -2,7 +2,17 @@ version: '2'
 
 services:
 
-  art12:
+  apache:
+    scale: 1
+    upgrade_strategy:
+      start_first: true
+
+  art12-app:
+    scale: 1
+    upgrade_strategy:
+      start_first: true
+
+  art12-static:
     scale: 1
     upgrade_strategy:
       start_first: true
