--- a/deploy/art12-staging/docker-compose.yml
+++ b/deploy/art12-staging/docker-compose.yml
@@ -2,18 +2,6 @@ version: '2'
 
 services:
 
-  apache:
-    image: eeacms/apache:2.4s
-    labels:
-      io.rancher.scheduler.affinity:host_label_ne: reserved=yes
-    depends_on:
-    - art12-app
-    - art12-static
-    environment:
-      TZ: Europe/Copenhagen
-    volumes:
-    - apache:/usr/local/apache2/conf
-
   art12-app:
     image: eeacms/art12-viewer:2.0
     labels:
@@ -21,7 +9,7 @@ services:
     depends_on:
     - mysql
     env_file:
-    - ../art12.env
+    - ../art12.staging.env
     environment:
       TZ: Europe/Copenhagen
     volumes:
@@ -42,7 +30,7 @@ services:
     labels:
       io.rancher.scheduler.affinity:host_label_ne: reserved=yes
     env_file:
-    - ../art12.env
+    - ../art12.staging.env
     environment:
       TZ: Europe/Copenhagen
     volumes:
@@ -50,16 +38,15 @@ services:
     command: "--character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
 
   rsync-server:
-    image: eeacms/rsync
+    image: eeacms/rsync:latest
     labels:
       io.rancher.container.pull_image: always
       io.rancher.scheduler.affinity:host_label_ne: reserved=yes
     depends_on:
-    - apache
-    - art12-app
+    - art17-app
     - mysql
     ports:
-    - "2223:22/tcp"
+    - "2222:22/tcp"
     command:
     - server
     env_file:
@@ -69,13 +56,10 @@ services:
     tty: true
     stdin_open: true
     volumes:
-    - apache:/usr/local/apache2/conf
     - nginx:/etc/nginx/conf.d
     - mysqldata:/var/lib/mysql
 
 volumes:
-  apache:
-    driver: rancher-nfs
   nginx:
     driver: rancher-nfs
   staticdata:
