--- a/deploy/art12.env.example
+++ b/deploy/art12.env.example
@@ -13,7 +13,8 @@ DB_NAME=
 
 GOOGLE_ANALYTICS=
 DEFAULT_PERIOD=
-PDF_DESTINATION=
-MAPS_STATIC=
 MAPS_FORMAT=
 PDF_URL_PREFIX=
+
+PDF_DESTINATION=factsheets/
+MAPS_STATIC=maps/
