--- a/deploy/conf/static.conf
+++ b/deploy/conf/static.conf
@@ -2,7 +2,7 @@ server {
     listen       80;
 
     location / {
-        root /var/local/art12/art12/static;
+        alias /var/local/art12/art12/static/;
         sendfile on;
         tcp_nopush on;
         gzip on;
