[refs #81736] Update docker installation guide for development

--- a/deploy/art12.env.example
+++ b/deploy/art12.env.example
@@ -10,11 +10,13 @@ DB_USER=
 DB_PASS=
 DB_HOST=
 DB_NAME=
+BIND_NAME=
 
 GOOGLE_ANALYTICS=
+LAYOUT_ZOPE_URL=
 DEFAULT_PERIOD=
-MAPS_FORMAT=
 PDF_URL_PREFIX=
-
-PDF_DESTINATION=factsheets/
-MAPS_STATIC=maps/
+PDF_DESTINATION=
+MAPS_STATIC=
+MAPS_FORMAT=
+AUTH_ZOPE=
