[#98453] Download factsheets from external source

--- a/deploy/art12.env.example
+++ b/deploy/art12.env.example
@@ -16,7 +16,11 @@ GOOGLE_ANALYTICS=
 LAYOUT_ZOPE_URL=
 DEFAULT_PERIOD=
 PDF_URL_PREFIX=
+LOCAL_PDF_URL_PREFIX=
+MAP_URL_PREFIX=
 PDF_DESTINATION=
+
+MAP_URL_PREFIX=
 MAPS_STATIC=
 MAPS_FORMAT=
 AUTH_ZOPE=
