[refs #105911] Rename zope variables to plone

--- a/deploy/art12.env.example
+++ b/deploy/art12.env.example
@@ -13,7 +13,7 @@ DB_NAME=
 BIND_NAME=
 
 GOOGLE_ANALYTICS=
-LAYOUT_ZOPE_URL=
+LAYOUT_PLONE_URL=
 DEFAULT_PERIOD=
 PDF_URL_PREFIX=
 LOCAL_PDF_URL_PREFIX=
@@ -23,4 +23,4 @@ PDF_DESTINATION=
 MAP_URL_PREFIX=
 MAPS_STATIC=
 MAPS_FORMAT=
-AUTH_ZOPE=
+AUTH_PLONE=
