--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colander==0.9.9
 https://github.com/eea/eea.usersdb/archive/v1.3.9.zip
 Flask==0.10.1
 Flask-Assets==0.10
+Flask-Collect==1.2.2
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
