--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -f http://eggshop.eaudeweb.ro
 colander==0.9.9
-https://github.com/eea/eea.usersdb/archive/v1.3.9.zip
+eea.usersdb==1.3.32
 Flask==0.10.1
 Flask-Assets==0.10
 Flask-Collect==1.2.2
@@ -15,7 +15,7 @@ Jinja2==2.7.3
 Mako==1.0.0
 MarkupSafe==0.23
 MySQL-python==1.2.5
-SQLAlchemy==0.9.7
+SQLAlchemy==1.2.0
 WTForms==2.0.1
 Werkzeug==0.9.6
 alembic==0.6.7
