--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "2.7"
+env:
+  global:
+    - EEA_PASSWORD_RESET=https://www.example.com/password-reset
 install:
   - pip install -r requirements-dev.txt --trusted-host eggshop.eaudeweb.ro
   - pip install pytest-cov==1.8.1 coverage==3.7.1 coveralls==0.5
