--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   art12-app:
     image: eeacms/art12-viewer:latest
-    container_name: art12-app
+    container_name: art12.app
     environment:
     - COLLECT_STATIC=yes
     - MIGRATE=yes
@@ -28,7 +28,7 @@ services:
 
   mysql:
     image: mysql:5.6
-    container_name: art12-mysql
+    container_name: art12.mysql
     env_file:
     - docker/art12.env
     environment:
@@ -36,6 +36,14 @@ services:
     volumes:
     - mysqldata:/var/lib/mysql
     command: "--character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
+
+  postfix:
+    image: eaudeweb/mailtrap:2.0
+    container_name: art12.postfix
+    environment:
+      TZ: Europe/Copenhagen
+    ports:
+    - 80:80
 
 volumes:
   mysqldata:
