--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 -f http://eggshop.eaudeweb.ro
-colander==0.9.9
-eea.usersdb==1.3.44
-Flask==1.1.1
-Flask-Assets==0.10
-Flask-Collect==1.2.2
-Flask-Login==0.3.2
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-SQLAlchemy==2.4.1
-Flask-Script==2.0.5
-Flask-Security==1.7.5
-Flask-WTF==0.10.2
-Jinja2==2.10.1
-Mako==1.0.0
-MarkupSafe==0.23
-MySQL-python==1.2.5
-SQLAlchemy==1.3.8
-WTForms==2.0.1
-Werkzeug==0.16.0
-alembic==0.6.7
-blinker==1.3
+alembic==1.6.5
+blinker==1.4
 bs4==0.0.1
+colander==1.8.3
 cssmin==0.2.0
-inflect==0.2.4
-itsdangerous==0.24
-jsmin==2.0.11
-meld3==1.0.0
-passlib==1.6.2
-path.py==7.0
-requests==2.22.0
-webassets==0.12.1
-wsgiref==0.1.2
+http://eggrepo.eea.europa.eu/d/eea.usersdb/f/eea.usersdb-2.6.zip
+email-validator==1.1.3
+Flask-Assets==2.0
+Flask-Collect==1.2.2 #
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.0.1
+Flask-Principal==0.4.0
+Flask-Security-Too==3.4.5
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+Flask==2.0.1
+inflect==5.3.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+jsmin==2.2.2
+Mako==1.1.4
+MarkupSafe==2.0.1
+meld3==2.0.1
+Flask-MySQL==1.5.2
+passlib==1.7.4
+path==16.0.0
+requests==2.26.0
 smart_getenv==1.1.0
+SQLAlchemy==1.4.20
+webassets==2.0
+Werkzeug==2.0.1
+WTForms==2.2.1
