--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,10 @@ jsmin==2.2.2
 Mako==1.1.4
 MarkupSafe==2.0.1
 meld3==2.0.1
-Flask-MySQL==1.5.2
+# Flask-MySQL==1.5.2
 passlib==1.7.4
 path==16.0.0
+psycopg2-binary==2.9.1
 requests==2.26.0
 smart_getenv==1.1.0
 SQLAlchemy==1.4.20
