[refs #135807] Prepare for database migration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,17 +23,6 @@ services:
     entrypoint: ["/usr/bin/tail", "-f", "/dev/null"]
     # command: ["runserver", "-t", "0.0.0.0", "-p", "5000"]
 
-  # mysql:
-  #   image: mysql:5.6
-  #   container_name: art12.mysql
-  #   env_file:
-  #   - docker/art12.env
-  #   environment:
-  #     TZ: Europe/Copenhagen
-  #   volumes:
-  #   - mysqldata:/var/lib/mysql
-  #   command: "--character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
-  
   db:
     image: postgres:13
     container_name: art12.db
@@ -45,7 +34,7 @@ services:
       TZ: Europe/Copenhagen
     volumes:
     - pg_data:/var/lib/postgresql/data
-    - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   postfix:
     image: eaudeweb/mailtrap:2.0
@@ -58,5 +47,3 @@ services:
 volumes:
   pg_data:
     driver: local
-  # mysqldata:
-  #   driver: local
