--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--f http://eggshop.eaudeweb.ro
 alembic==1.6.5
 bleach==3.3.1
 blinker==1.4
@@ -28,6 +27,7 @@ meld3==2.0.1
 passlib==1.7.4
 path==16.0.0
 psycopg2-binary==2.9.1
+python-ldap==3.3.1
 requests==2.26.0
 smart_getenv==1.1.0
 SQLAlchemy==1.4.20
