--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colander==2.0
 cssmin==0.2.0
 http://eggrepo.eea.europa.eu/d/eea.usersdb/f/eea.usersdb-2.6.zip
 email-validator==2.2.0
+Flask-Admin==1.6.1
 Flask-Assets==2.1.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
