--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ Jinja2==3.1.4
 jsmin==3.0.1
 Mako==1.3.6
 MarkupSafe==3.0.2
+openpyxl==3.1.5
+pandas==2.3.2
 passlib==1.7.4
 path==17.0.0
 psycopg2-binary==2.9.10
